2004-01-28  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: invert from/to start offset for kernel samples

	* pp/opstack.cpp:
	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: if we can't bfd_open a binary and
	  the sample file show it's a kernel sample file we must ignore
	  completely the it. (Added to TODO, there is something fragile here)

2004-01-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/image_errors.cpp: typo, warn at first error not from second

2004-01-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/utility_tests.cpp:
	* libopt++/popt_options.cpp: s/template <class/template <typename/

2004-01-28  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/init.c: show buffer read only when --verbose

	* libpp/image_errors.cpp:
	* libpp/image_errors.h: add needed API for callgraph image error
	* libpp/callgraph_container.cpp: use it.
	* pp/opstack.cpp: report_image_errors()

2004-01-27  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: Fix bfd_find_nearest_line() and separate
	  debug info, please test it.

2004-01-27  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml:
	* utils/opcontrol: add --cpu-buffer-size and document it.

2004-01-27  Will Cohen  <wcohen@redhat.com>

	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/unit_masks: correct branch_type unit mask.
	
2004-01-25  John Levon  <levon@movementarian.org>

	* doc/Makefile.am: fix make chunk

	* doc/buffers.dia: add editable source

	* doc/buffers.png: fix stupid typos

	* doc/internals.xml: add some more text

2004-01-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/parse_filename.h:
	* libpp/parse_filename.cpp: profile_spec_equal() new predicate
	* libpp/arrange_profiles.cpp: use it to ensure we create a new
	  profile_samples_file when needed.

2004-01-24  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/opstack.1.in: some cleanups

	* libop/tests/load_events_files_tests.c: