@@ -54,6 +54,10 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 Before 1.0 little stuff
 -----------------------
 
+ o libop/op_string.c is dumb (skip_ws, skip_nonws) we can't use them
+  to parse a file and report correct line number error because skip_ws skip
+  eat \n (so op_events.c report correct line number only if there is no empty
+  line in the events files)
  o document OPROFILE_EVENT_FILES_DIR
  o depedencies between profile_container.h symbol_container.h and
   sample_container.h become more and more ugly, I needed to include them
