@@ -392,8 +392,14 @@ int main(int argc, char const *argv[])
 		break;
 	case CPU_RTC:
 		break;
-	default:
+
+	// don't use default, if someone add a cpu he wants a compiler warning
+	// if he forgets to handle it here.
+	case CPU_TIMER_INT:
+	case CPU_NO_GOOD:
+	case MAX_CPU_TYPE:
 		printf("%d is not a valid processor type,\n", cpu_type);
+		break;
 	}
 
 	list_for_each(pos, events) {
